# linkerd-failover

./: .gitattributes  .gitignore  CHANGES.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  amd64.dockerfile  arm.dockerfile  arm64.dockerfile  deny.toml  integration.just  justfile
.devcontainer/: devcontainer.json
.github/: CODEOWNERS.yml  dependabot.yml  stale.yml
.github/actions/docker-build/: action.yml
.github/actions/failover-test/: action.yml
.github/workflows/: action.yml  codecov.yml  deny.yml  helm.yml  integration-test.yml  lints.yml  markdownlint.yml  release.yml  static_checks.yml  test.yml  toolchain.yml
charts/linkerd-failover/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/linkerd-failover-tests/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/linkerd-failover-tests/templates/: podinfo-central-deployment.yaml  podinfo-central-service.yaml  podinfo-east-deployment.yaml  podinfo-east-service.yaml  podinfo-service.yaml  podinfo-west-deployment.yaml  podinfo-west-service.yaml  trafficsplit.yaml
charts/linkerd-failover-tests/templates/tests/: curl-pod.yaml
charts/linkerd-failover/templates/: linkerd-failover-deployment.yaml  linkerd-failover-rbac.yaml  namespace-metadata-rbac.yaml  namespace-metadata.yaml
cli/: Cargo.toml
cli/src/: check.rs  lib.rs  main.rs  status.rs  table.rs
controller/: Cargo.toml
controller/src/: endpoints.rs  lib.rs  main.rs  traffic_split.rs
src/: endpoints.rs  lib.rs  main.rs  traffic_split.rs
