[package]
name = "linkerd-failover"
version = "0.1.0"
authors = ["Linkerd authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"

[features]
default = ["runtime"]
runtime = ["kube/runtime"]

[dependencies]
anyhow = "1.0.53"
futures = "0.3.21"
kube = { version = "^0.68.0", features = ["derive"] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_22"] }
schemars = "0.8.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["fmt", "env-filter"]}