[package]
name = "linkerd-failover"
version = "0.1.0"
authors = ["Linkerd authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["runtime"]
runtime = ["kube/runtime"]

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
futures = "0.3"
kube = { version = "0.69", features = ["derive"] }
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_20"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
