[package]
name = "linkerd-failover-cli"
version = "0.1.0"
authors = ["Linkerd authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_20"] }
linkerd-failover-controller = { path = "../controller" }
serde = "1"
serde_json = "1"

[dependencies.kube]
version = "0.75"
default-features = false
features = [
    "client",
    "derive",
    "openssl-tls",
    "runtime",
]

[dependencies.kubert]
version = "0.9"
default-features = false
features = [
    "clap",
    "runtime",
]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]
