[package]
name = "linkerd-failover-cli"
version = "0.1.0"
authors = ["Linkerd authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = []
# Supports static linking
openssl-vendored = ["openssl/vendored"]

[dependencies]
anyhow = "1"
linkerd-failover-controller = { path = "../controller" }
openssl = "0.10.45"
serde = "1"
serde_json = "1"

[dependencies.clap]
version = "4"
default-features = false
features = ["color", "derive", "env", "help", "std", "suggestions"]

[dependencies.k8s-openapi]
version = "0.16"
default-features = false
features = ["v1_21"]

[dependencies.kube]
version = "0.76"
default-features = false
features = ["client", "derive", "openssl-tls", "runtime"]

[dependencies.kubert]
version = "0.14"
default-features = false
features = ["clap", "runtime"]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]
