[package]
name = "linkerd-failover-controller"
version = "0.1.0"
authors = ["Linkerd Authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
futures = "0.3"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "help", "std"]

[dependencies.k8s-openapi]
version = "0.16"
default-features = false
features = ["v1_21"]

[dependencies.kube]
version = "0.75"
default-features = false
features = ["client", "derive", "openssl-tls", "runtime"]

[dependencies.kubert]
version = "0.11.1"
default-features = false
features = ["clap", "runtime"]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]

[dev-dependencies]
tokio-stream = "0.1"
tokio-test = "0.4"

[dev-dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["fmt"]
